# gmail-filter-creator

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
gmail_filter_converter/: __init__.py  cli.py  fields.py  grouped_yaml_serializer.py  id_generator.py  models.py  name_generator.py  server.py  xml_parser.py  yaml_parser.py  yaml_serializer.py
tests/: __init__.py  example_filters.xml  test_filter_names.py  test_optional_fields.py  test_xml_to_yaml.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  api.ts  types.ts
ui/src/components/: FilterCard.tsx  FilterForm.tsx  GroupCard.tsx
