[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmail-filter-creator"
version = "0.1.0"
description = "Create Gmail filters easily from YAML files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gmail Filter Creator Contributors"},
]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
gmail-filter-converter = "gmail_filter_converter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["gmail_filter_converter"]
